# cyberium-grid

./: .env.example  ARCHITECTURE.md  CLAUDE.md  README.md  SAFETY.md
.github/workflows/: ci.yml  sbom.yml
blackout-protocol/: README.md
cold-wire/: README.md  intercepted_tool.py
dead-pixel/: README.md
dns-exfil/: README.md
docs/: compliance-mapping.md  purdue-action-matrix.md  threat-model.md
docs/adr/: 0001-langgraph-agent-core.md  0002-rust-safety-gate.md  0003-go-dpi-sensor.md  0004-physics-informed-models.md
ghost-signal/: README.md
grid-mind/: README.md
grid-shell/: README.md
hash-crash/: README.md
infra/: docker-compose.yml
infra/db/init/: 01_postgres_schema.sql  02_timescale_hypertable.sql  03_clickhouse_schema.sql
infra/grafana/provisioning/datasources/: orhashield.yml
infra/nats/: nats.conf
infra/prometheus/: prometheus.yml
log-sweep/: README.md
offside/: README.md
policy/: README.md  orhashield.rego
python-fundamentals/: FIELD-KIT.md  README.md  recovered_script.py
scripts/: dev-down.sh  dev-up.sh  lint-all.sh  test-all.sh
sensors/dpi-engine/: Dockerfile  go.mod  main.go
sensors/dpi-engine/pkg/capture/: afxdp.go  pcap.go
sensors/dpi-engine/pkg/emit/: nats.go
sensors/dpi-engine/pkg/events/: events.go
sensors/dpi-engine/pkg/fingerprint/: passive.go
sensors/dpi-engine/pkg/parsers/: bacnet.go  dnp3.go  enip.go  modbus.go
sensors/dpi-engine/proto/: events.proto
serpent/: README.md
services/agent-orchestrator/: Dockerfile  pyproject.toml
services/agent-orchestrator/src/orhashield/: __init__.py
services/agent-orchestrator/src/orhashield/agents/: __init__.py  critic.py  graph.py  human_gate.py  hypothesis_generator.py  protocol_expert.py  response_planner.py  state.py  supervisor.py  threat_intel.py  twin_verifier.py
services/agent-orchestrator/src/orhashield/memory/: __init__.py  checkpointer.py
services/agent-orchestrator/src/orhashield/tools/: __init__.py  cve_lookup.py  nats_consumer.py  twin_api.py
services/agent-orchestrator/tests/: conftest.py
services/agent-orchestrator/tests/eval/: test_graph_unit.py
services/control-plane/: Dockerfile  pyproject.toml
services/control-plane/src/orhashield_cp/: __init__.py  main.py
services/control-plane/src/orhashield_cp/auth/: middleware.py
services/control-plane/src/orhashield_cp/routers/: __init__.py  actions.py  alerts.py  assets.py  compliance.py
services/control-plane/src/orhashield_cp/schemas/: __init__.py  action.py  alert.py  asset.py
services/control-plane/src/orhashield_cp/ws/: __init__.py  realtime.py
services/safety-gate/: Cargo.toml  Dockerfile
services/safety-gate/src/: action.rs  evaluator.rs  main.rs
services/safety-gate/tests/: property_tests.rs
ui/dashboard/: Dockerfile  package.json  tailwind.config.ts
ui/dashboard/src/app/: globals.css  layout.tsx  page.tsx
ui/dashboard/src/app/agent-activity/: page.tsx
ui/dashboard/src/app/alerts/: page.tsx
ui/dashboard/src/app/assets/: page.tsx
ui/dashboard/src/app/compliance/: page.tsx
ui/dashboard/src/components/: AlertsFeed.tsx  ApprovalQueue.tsx  AssetGraph.tsx  ComplianceDashboard.tsx  Navbar.tsx  PurdueTag.tsx  SeverityBadge.tsx  StatCard.tsx  StatusDot.tsx
ui/dashboard/src/hooks/: useWebSocket.ts
ui/dashboard/src/lib/: api.ts  types.ts
