[project]
name = "orhashield-agent-orchestrator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "anthropic>=0.40.0",
    "pydantic>=2.10.0",
    "nats-py>=2.9.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    "tenacity>=9.0.0",
    "prometheus-client>=0.21.0",
    "protobuf>=5.0.0",
    "qdrant-client>=1.12.0",
    "opentelemetry-api>=1.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "hypothesis>=6.0.0",
    "faker>=33.0.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orhashield"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "C4"]
ignore = ["S101", "B008"]

[tool.mypy]
strict = true
python_version = "3.11"
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks tests requiring running infrastructure",
]
